# HotelServer

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  main.py  password.txt  pyproject.toml
.github/workflows/: docker-image.yml
apps/.service/: service.storage  session.secret
