[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotelserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "py4web>=1.20251212.1",
    "httpx",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "requests==2.32.5",
    "gspread",
    "oauth2client",
    "gspread-dataframe",
    "schedule",
    "pyyaml",
    "python-dotenv>=1.2.1",
    "flet[all]>=0.80.1",
]
